corrected the overflow on the strongman and gym page

--- a/strongman.css
+++ b/strongman.css
@@ -132,4 +132,8 @@ color: rgba(255, 255, 255, 0.5);
    .list, .train{
     margin: 0% 2%;
    }
+   body{
+    overflow: hidden;
+   }
+
 }
