--- a/style.css
+++ b/style.css
@@ -224,5 +224,8 @@ color: rgba(255, 255, 255, 0.5);
     .last-1{
         flex-direction: column;
     }
+    body{
+        overflow: hidden;
+    }
 
 }
